<resources>
    <string name="app_name">SeokwangYouthDoor</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_timetable">TimeTable</string>
    <string name="title_board">Board</string>
    <string name="title_info">Information</string>
    <string name="title_more">More</string>
    <string name="paster">Paster</string>
    <string name="chief_teacher">Chief teacher</string>
    <string name="second_chief_teacher">Second Chief teacher</string>
    <string name="worship_team_leader">Worship Team Leader</string>
    <string name="teachers">Teachers</string>
    <string name="students">Students</string>
    <string name="staff">Staff</string>
    <string name="unknown">Unknown</string>
    <string name="className">Class</string>
    <string name="unknownUser">UnknownUser</string>
    <string name="request_auth_code">Request Auth Code</string>
    <string name="input_auth_code">Input Auth Code</string>
    <string name="introduce_auth_step">Please check your email.\nInput auth code and push the button.</string>
    <string name="welcome_message">Welcome! %s.</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="member_birthday">Birthday</string>
    <string name="phone_number">Phone number</string>
    <string name="age">Age</string>
    <string name="job">Job</string>
    <string name="school">School</string>
    <string name="email">E-Mail</string>
    <string name="sns">SNS</string>
    <string name="hobby">Hobby</string>
    <string name="title_calendar">Calendar</string>
    <string name="birthday">Birthday</string>
    <string name="board">Board</string>
    <string name="calendar">Calendar</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="please_input_title">Please input title.</string>
    <string name="please_input_description">Please input description.</string>
    <string name="attach_image">Attach Image</string>
    <string name="add_board">Add Board</string>
    <string name="edit_board">Edit Board</string>
    <string name="detail_board">Detail Board</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="empty_board">Empty</string>
    <string name="warning">Warning</string>
    <string name="delete_this_board">Do you delete this board?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="contacts">Contacts</string>
    <string name="please_input_search">Please input search.</string>
    <string name="new_member">New Member</string>
    <string name="notice">Notice</string>
    <string name="last_week_attendance">Last Week Attendance</string>
    <string name="last_week_offering">Last Week Offering</string>
    <string name="next_week_staff">Next week staff</string>
    <string name="worship_team">Worship team</string>
    <string name="free_board">Free Board</string>
    <string name="this_week_events">This week events</string>
    <string name="study_music">Study Music</string>
    <string name="app_info">App Information</string>
    <string name="exit_app">Do you want to exit this app?</string>
    <string name="detail_info">Detail Information</string>
    <string name="choice_class">Choice Class</string>
    <string name="not_founded_class_name">There is no class name</string>
    <string name="check_logout">Do you want to logout?</string>
    <string name="input_domain">Input domain</string>
    <string name="input_password">Input password</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="loading_image">Loading image</string>
    <string name="apply">Apply</string>
    <string name="logout">Logout</string>
    <string name="change_profile_image">Change Profile Image</string>
    <string name="info_app_version">App Version</string>
    <string name="info_app_author">App author</string>
    <string name="info_app_guide">User Guide</string>
    <string name="developing">Developing...</string>
    <string name="registration">Registration</string>
    <string name="login">Login</string>
    <string name="not_registed_user">Not registed user</string>
    <string name="how_to_login">1. Input your email.\n2. Select your email domain.\n3. Input your own password(6 digit)\n4. Click Login button.</string>
    <string name="how_to_authorize">1. Input your email.\n2. Select your email domain.\n3. Input your own password(6 digit)\n4. Click Authorization button.</string>
    <string name="password">Password</string>
    <string name="input_wrong_password">Please check password!</string>
    <string name="login_failed">Login failed!\nCheck your email and password.</string>
    <string name="password_show">Show Number</string>
    <string name="registration_success">Success Registration!</string>
    <string name="registration_failed">Registration failed.</string>
    <string name="wrong_password">Wrong password.</string>
    <string name="get_permission_success">Get permission success!</string>
    <string name="get_permission_failed">Get permission failed!</string>
    <string name="exit_guide">Exit Guide</string>
</resources>