<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="kr.co.skchurch.seokwangyouthdoor.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_timetable"
        android:name="kr.co.skchurch.seokwangyouthdoor.ui.timetable.TimetableFragment"
        android:label="@string/title_timetable"
        tools:layout="@layout/fragment_timetable" />

    <fragment
        android:id="@+id/navigation_info"
        android:name="kr.co.skchurch.seokwangyouthdoor.ui.memberinfo.MemberInfoCategoryFragment"
        android:label="@string/title_info"
        tools:layout="@layout/fragment_member_info_category" />

    <fragment
        android:id="@+id/navigation_more"
        android:name="kr.co.skchurch.seokwangyouthdoor.ui.more.MoreFragment"
        android:label="@string/title_more"
        tools:layout="@layout/fragment_more" />
</navigation>