<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ui.login.LoginActivity">

    <TextView
        android:id="@+id/messageTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        tools:text="adlkjflkadjflkfj"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/emailEditTxt"
        app:layout_constraintVertical_chainStyle="packed"/>
    <EditText
        android:id="@+id/emailEditTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/emailDivider"
        app:layout_constraintTop_toBottomOf="@id/messageTxt"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
        android:id="@+id/emailDivider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="\@"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginHorizontal="5dp"
        app:layout_constraintEnd_toStartOf="@+id/domainLayout"
        app:layout_constraintTop_toTopOf="@id/emailEditTxt"
        app:layout_constraintBottom_toBottomOf="@id/emailEditTxt"/>
    <FrameLayout
        android:id="@+id/domainLayout"
        android:layout_width="160dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/emailEditTxt"
        app:layout_constraintBottom_toBottomOf="@id/emailEditTxt">
        <Spinner
            android:id="@+id/domainSpinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <EditText
            android:id="@+id/domainEditTxt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/input_domain"
            android:inputType="textEmailAddress"
            android:visibility="gone"
            tools:visibility="visible" />
    </FrameLayout>
    <LinearLayout
        android:id="@+id/passwordLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/domainLayout"
        app:layout_constraintBottom_toTopOf="@+id/requestAuthCodeBtn">
        <TextView
            android:id="@+id/passwordTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/password"
            android:textSize="17sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text=":"
            android:layout_marginHorizontal="7dp"
            android:textSize="17sp"/>
        <EditText
            android:id="@+id/passwordEditTxt"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:hint="@string/input_password"
            android:maxLength="6"
            android:inputType="numberPassword" />
        <CheckBox
            android:id="@+id/passwordShowCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_show"
            android:textSize="10sp"
            android:layout_marginStart="10dp"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>
    <Button
        android:id="@+id/requestAuthCodeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/passwordLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyle"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>